Change log

0.97b: Finally have a copy of egcs, so grap will now compile under it
using both the stl and the standard string class.  What do you know,
compiling under egcs halves the run time.  This is roughly half due to
better egcs compilation and half due to the better performance of the
standard string class.

0.95b: bug fix: deleting grap_buffer_state contents twice on error, allow 
more than one shift description on ticks, grids, and labels.  Thanks to
Anindo Banerjea at ISI for spotting my misimplementation.

Another couple of Bannerjea catches: through is now recognized as a
synonym for thru.  "For," "then" and "else" clauses were previously
treated as macros but now have a terminating separator added to them.
The result is that things like

if (x == 3) { y = y + 1 }
x = x + 1

work now.  (If the { } is treated as a macro defined and expanded on
the spot, the grap parser sees y = y + 1x = x + 1 and cannot parse the
expression y+1x).  The new behavior is both more intuitive and more in
line with previous grap implementations.

More from Anindo: expansion of macro arguments assumed that the only
possible character following a dollar sign was a single digit.  This
caused problems both when a non-digit followed and the $ was literal,
and when the intent was to access an argument with an index greater
than 9.  Argument expansion now only expands when a $ is followed by 1
or more digits, and includes all the digits in the index.

The frame statement will now accept the default line style before or
after the frame size.  I still don't accept things like frame ht 3
solid wid 3 - the specifications of the size must be contiguous.

0.92a: bug fix - string equality check.  Small change to Makefile.in
to support default Solaris behavior.  Added -v for version info.  Some
general internals fiddling (I'd like to call it cleanup, but I think
that's generous).

0.91a: small changes for the RPM

0.9a: Added commands for making bars.  
