@@ -1,5 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(grap.h)
+AC_INIT(grap.y)
+AC_CONFIG_HEADER(grap.h)
 AC_LANG_CPLUSPLUS
 
 dnl Checks for programs.
