@@ -12,6 +12,8 @@ extern "C" {
 #include <ostream.h>
 #include <sys/param.h>
 #include "grap.h"
+#include "grap_data.h"
+#include "grap_draw.h" 
 #include "y.tab.h"
 
 //#define LEX_DEBUG
